# tree-grepper

./: .envrc  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.rs  build.rs  default.nix  flake.nix  shell.nix
.github/workflows/: ci.yml  update_nix.yml
1.0.0/src/: main.rs
nix/: sources.json
scripts/: tree-grepper  tree-grepper-dump  update-submodules.sh  update-subtrees.sh
src/: cli.rs  extractor.rs  extractor_chooser.rs  files.rs  language.rs  main.rs  tree_view.rs
src/snapshots/: tree_grepper__tests__all_cpp.snap  tree_grepper__tests__all_elixir.snap  tree_grepper__tests__all_elm.snap  tree_grepper__tests__all_haskell.snap  tree_grepper__tests__all_javascript.snap  tree_grepper__tests__all_markdown.snap  tree_grepper__tests__all_nix.snap  tree_grepper__tests__all_php.snap  tree_grepper__tests__all_ruby.snap  tree_grepper__tests__all_rust.snap  tree_grepper__tests__all_typescript.snap  tree_grepper__tests__json_lines_output.snap  tree_grepper__tests__json_output.snap  tree_grepper__tests__lines_output.snap  tree_grepper__tests__pretty_json_output.snap
tests/: cli_tests.rs
tests/cmd/: languages.trycmd  query.trycmd  show_tree.trycmd
