[package]
name = "tree-grepper"
version = "2.5.0-pre"
authors = ["Brian Hicks <brian@brianthicks.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.93"
bump_alloc = "0.1.0"
clap = { version = "4.5.20", features = [ "std", "color", "suggestions", "cargo" ] }
crossbeam = "0.8.4"
ignore = "0.4.23"
itertools = "0.13.0"
rayon = "1.10.0"
serde = { version = "1.0.214", features = [ "derive" ] }
serde_json = "1.0.132"
strum = "0.26.3"
strum_macros = "0.26.4"
tree-sitter = "0.23.0"

[build-dependencies]
cc = { version = "1.2.1", features = [ "parallel" ] }

[dev-dependencies]
trycmd = "0.15.8"
