[package]
name = "tree-grepper"
version = "2.5.0-pre"
authors = ["Brian Hicks <brian@brianthicks.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.98"
bump_alloc = "0.1.0"
clap = { version = "4.5.40", features = [ "std", "color", "suggestions", "cargo" ] }
crossbeam = "0.8.4"
ignore = "0.4.23"
itertools = "0.14.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
tree-sitter = "0.25.6"

[build-dependencies]
cc = { version = "1.2.29", features = [ "parallel" ] }

[dev-dependencies]
trycmd = "0.15.9"
