[package]
name = "tree-grepper"
version = "2.5.0-pre"
authors = ["Brian Hicks <brian@brianthicks.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.98"
bump_alloc = "0.1.0"
clap = { version = "4.5.43", features = [ "std", "color", "suggestions", "cargo" ] }
crossbeam = "0.8.4"
ignore = "0.4.23"
itertools = "0.14.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.142"
strum = "0.27.2"
strum_macros = "0.27.2"
tree-sitter = "0.25.8"

[build-dependencies]
cc = { version = "1.2.32", features = [ "parallel" ] }

[dev-dependencies]
trycmd = "0.15.10"
